вынес регистрацию, логин и обновление токенов в сервисы и хендлер авторизации
